@@ -1,3 +1,7 @@
+2011-12-30  Holger Vogt
+ * inpcom.c: remove a bug reading a file 
+   (FIXME: .inc and .lib need some general overhauling!)
+
 2011-12-30  Robert Larice
  * src/include/ngspice/cktdefs.h ,
  * src/include/ngspice/pzdefs.h ,
@@ -7,7 +11,7 @@
  * src/spicelib/devices/numos/numosdef.h :
   remove CVS `Id',`log' etc. keyword incantations
 
-2011-12-29  Holger Vogt
+2011-12-30  Holger Vogt
  * inppas3.c, cktdest.c: reduce memory leaks
  * inpsymt.c: beautify
  * inp.c: .csparam allows to tranfer a param into a vector
